sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:16: error: illegal start of statement
		else if (plusPetit(cpt+1,cpt-1))
                ^AlgGnomeSort:21: error: ';' expected but 'else' found.
		else
                ^